changed media query to handle search on mobile; fixed search video card description and title

--- a/src/Header.css
+++ b/src/Header.css
@@ -108,12 +108,3 @@
         display: none;
     }
 }
-
-@media screen and (max-width:530px) {
-    .header__input > * {
-        display: none;
-    }
-    .header__input {
-        display: none;
-    }
-}
